programs/2-typecheck/invalid/example/4.8.2-capexp1.go
// invalid cap builtin: expr not a slice or array
package test

func foo() {
	type point struct {
		a, b int
	}
	var a point
	b := cap(a)
}